<resources>
    <string name="app_name">InfoBar</string>
    <string name="title_activity_maps">Map</string>
    <string name="readFull">Read full article here. </string>
    <string name="flipPage">Flip the page for next article.</string>
    <string name="settings">Settings</string>
    <string name="languageHeading">Choose your language</string>
    <string name="english">English</string>
    <string name="hindi">हिंदी</string>
    <string name="mode">Select mode</string>
    <string name="lightMode">Light</string>
    <string name="darkMode">Dark</string>
    <string name="general">General</string>
    <string name="notify">Notification Settings</string>
    <string name="shareThis">Share this App</string>
    <string name="rateThis">Rate this App</string>
    <string name="feedback">Feedback</string>
    <string name="submitNews">Submit your news Article</string>
    <string name="aboutUs">About us</string>
    <string name="contactUs">Contact here</string>
    <string name="newsLanguage">news</string>
    <string name="yourFeed">Your Feed</string>
    <string name="defaultMode">Default Mode</string>
    <string name="infosys">Infosys</string>
    <string name="allStocks">All Stocks</string>
    <string name="backStocks">Back</string>
    <string name="filtersort">FILTER-SORT</string>
    <string name="searchHint">Search News</string>
    <string name="politics">Politics</string>
    <string name="entertainment">Entertainment</string>
    <string name="cricket">Cricket</string>
    <string name="youtube">YouTube</string>
    <string name="corona">Corona</string>
    <string name="world">World</string>
    <string name="science">Science &amp; Tech</string>
    <string name="business">Business</string>
    <string name="back">Back</string>
    <string name="overview">Overview</string>
    <string name="explore">Explore</string>
    <string name="categories">Categories</string>
    <string name="loading">Loading News</string>
    <string name="Trending">Trending</string>
    <string name="Official">Official</string>
    <string name="Misc">Miscellaneous</string>
    <string name="ContactToolbar">Contact Us</string>
    <string name="Mobile">Whatsapp:  +918294699376</string>
    <string name="Email">Email:  tj644686@gmail.com</string>
    <string name="Insta">Instagram:  infobar_ib</string>
    <string name="AboutToolbar">About Us</string>
    <string name="getInTouch">Get in touch with us</string>
    <string name="aboutText">Time is the most valuable thing one can spend and we are concerned about it. This app focuses on delivering news summaries with right content and feature of listening to those summaries. You can switch between Hindi and English with various categories. If you find any bug, please report it to our social media handles including Gmail, provided at Contact here button in Settings. You can contact us at any moment. If there is any bug or content related issue, please let us know. We will definitely try to figure it out. You can also submit your own news or any problem, you are facing in your area or anywhere else. We will try to publish it, so that it could get resolved. There is an Official Category at the bottom of Overall page, there we are uploading only verified things. Stay tuned with us and we will never disappoint you. We are trying to improve more.</string>
</resources>