<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactHereActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/firstContact"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/backContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_arrow_back_black"
                app:layout_constraintBottom_toBottomOf="@+id/firstContact"
                app:layout_constraintStart_toStartOf="@id/firstContact"
                app:layout_constraintTop_toTopOf="@id/firstContact" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/ContactToolbar"
                android:textColor="@color/black"
                android:textSize="19sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/secondLine"
                android:layout_width="35dp"
                android:layout_height="2dp"
                android:background="#1834CD"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:scrollbars="horizontal|vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/toolbarContact">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:id="@+id/iconImage"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_layers"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/appNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iconImage" />
            <TextView
                android:id="@+id/whatsapp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="whatsappClick"
                android:text="@string/Mobile"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/appNameTextView"
                android:layout_marginStart="15dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="30dp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                android:drawablePadding="10dp"
                android:drawableEnd="@drawable/ic_whatsapp"
                android:background="?attr/selectableItemBackground" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Email"
                android:textSize="16sp"
                android:id="@+id/gmail"
                app:layout_constraintTop_toBottomOf="@+id/whatsapp"
                android:layout_marginStart="15dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                android:drawablePadding="10dp"
                android:drawableEnd="@drawable/ic_gmail"
                android:onClick="gmailClick"
                android:background="?attr/selectableItemBackground" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Insta"
                android:textSize="16sp"
                android:id="@+id/instagram"
                app:layout_constraintTop_toBottomOf="@+id/gmail"
                android:layout_marginStart="15dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                android:drawablePadding="10dp"
                android:drawableEnd="@drawable/ic_instagram"
                android:onClick="instaClick"
                android:background="?attr/selectableItemBackground" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/instagram"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/getInTouch"
                android:layout_marginTop="30dp"
                android:textColor="@color/black"/>




        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>